--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <header>
+    <!-- bovenste deel van de pagina -->
     <div id="pagetopid" class="d-flex justify-content-center">
         <section id="pagetop" class="d-flex flex-column">
             <a href="http://localhost:63342/HTML_exam/index.html?_ijt=g5179phohgog33glm050ier0dr&_ij_reload=RELOAD_ON_SAVE">
@@ -32,10 +33,10 @@
     </div>
 
     <div id="img1id" class="d-flex justify-content-center">
-        <img src="img/homescreen.png" alt="Nokia Lumia wbb">
+        <img class="img-top" src="img/homescreen.png" alt="Nokia Lumia wbb">
     </div>
 
-    <!-- Bootstrap -->
+    <!-- Bootstrap gedeelte -->
     <section class="background">
         <div class="wrapper">
             <div class="content">
@@ -65,7 +66,7 @@
         </div>
     </section>
 
-    <!-- Documentation -->
+    <!-- Documentation gedeelte -->
     <section class="background">
         <div class="wrapper">
             <div class="documentation-section">
@@ -98,7 +99,7 @@
                 </div>
             </div>
 
-            <!-- App Features -->
+            <!-- Features gedeelte -->
             <div class="app-feature-section">
                 <div class="text-section">
                     <h2 class="bstitel">All you want from an app</h2>
@@ -132,7 +133,7 @@
         </div>
     </section>
 
-    <!-- awesome features -->
+    <!-- awesome features gedeelte -->
     <section class="background2">
     <div class="container">
         <h2 class="bstitel">Awesome Features</h2>
@@ -162,9 +163,9 @@
     </section>
 </header>
 
-<!-- Newsletter -->
+<!-- Newsletter gedeelte -->
 <section class="newsletter-section">
-    <h2 class="newsletter-titel">Subscribe to our newsletter</h2>
+    <h2 class="newsletter-titel wobble-hor-bottom">Subscribe to our newsletter</h2>
     <p class="newsletter-txt">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum.</p>
     <div id="newsletter_form">
         <form action="php/send.php" method="post" class="subscribe-form" id="subscribe-form">
@@ -174,5 +175,8 @@
     </div>
     <div id="preview"></div>
 </section>
+<footer>
+    <p class="d-flex justify-content-center newsletter-txt">Copyright 2014 Hype</p>
+</footer>
 </body>
 </html>
